[gd_scene load_steps=13 format=3 uid="uid://emu3gsuowal5"]

[ext_resource type="Script" path="res://scripts/real_menu.gd" id="1_xsix2"]
[ext_resource type="FontFile" uid="uid://b5ancu1u40cps" path="res://fonts/m6x11.ttf" id="2_vis01"]
[ext_resource type="Texture2D" uid="uid://2ynqds7q7hku" path="res://assets/MiddleTree.png" id="2_y0qj7"]
[ext_resource type="Texture2D" uid="uid://qhgk2q324vvo" path="res://assets/DeathWall.png" id="3_evu6q"]
[ext_resource type="Texture2D" uid="uid://cp3cnpcnrgh8a" path="res://assets/noise.jpg" id="3_myav7"]
[ext_resource type="Texture2D" uid="uid://bq57pdleblw15" path="res://assets/light.webp" id="4_5hbfx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sro42"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_7yjt8"]
font = ExtResource("2_vis01")
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_nq0l5"]
font = ExtResource("2_vis01")
font_size = 37
font_color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wppw6"]
font = ExtResource("2_vis01")
font_size = 37
font_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_evh78"]
font = ExtResource("2_vis01")
font_size = 37
font_color = Color(0.054902, 0.054902, 0.054902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cmawp"]
font = ExtResource("2_vis01")
font_size = 37
font_color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="RealMenu" type="CanvasLayer"]
script = ExtResource("1_xsix2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.0
offset_top = -311.0
offset_right = 382.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sro42")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="Background" type="TextureRect" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_y0qj7")

[node name="Noise" type="TextureRect" parent="Control/PanelContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0.27451)
layout_mode = 2
texture = ExtResource("3_myav7")

[node name="Wolfs" type="TextureRect" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_evu6q")

[node name="Shadow" type="TextureRect" parent="Control/PanelContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0.627451)
layout_mode = 2
texture = ExtResource("4_5hbfx")

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "..."
label_settings = SubResource("LabelSettings_7yjt8")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Run" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_vis01")
theme_override_font_sizes/font_size = 100
text = "Run"

[node name="Credits" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_vis01")
theme_override_font_sizes/font_size = 100
text = "Credits"

[node name="Credits" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Sebastien" type="Label" parent="Control/PanelContainer/MarginContainer/Credits"]
layout_mode = 2
text = "Sebastien: graphics design and development."
label_settings = SubResource("LabelSettings_nq0l5")

[node name="Victor" type="Label" parent="Control/PanelContainer/MarginContainer/Credits"]
layout_mode = 2
text = "Victor: development director."
label_settings = SubResource("LabelSettings_wppw6")

[node name="Zacharie" type="Label" parent="Control/PanelContainer/MarginContainer/Credits"]
layout_mode = 2
text = "Zacharie: development director."
label_settings = SubResource("LabelSettings_evh78")

[node name="Raffaele" type="Label" parent="Control/PanelContainer/MarginContainer/Credits"]
layout_mode = 2
text = "Atlas97: music and development."
label_settings = SubResource("LabelSettings_cmawp")

[node name="Back" type="Button" parent="Control/PanelContainer/MarginContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_vis01")
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="Quit" type="Button" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_vis01")
theme_override_font_sizes/font_size = 100
text = "Quit"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Credits/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Quit" to="." method="_on_quit_pressed"]
